# bchain

./: README.md  pyproject.toml
bclib/: blockchain.py
tests/: test_blockchain.py
